--- a/localhost/nginx/nginx.conf
+++ b/localhost/nginx/nginx.conf
@@ -1,12 +1,16 @@
 user  www-data;
 worker_processes  auto;
+worker_rlimit_nofile 65535;
+
 
 error_log  /var/log/nginx/error.log warn;
 pid        /run/nginx.pid;
 
 
 events {
-  worker_connections  1024;
+  worker_connections  8192;
+  multi_accept on;
+  use epoll;
 }
 
 
