--- a/localhost/nginx/sites-enabled/isuconquest.conf
+++ b/localhost/nginx/sites-enabled/isuconquest.conf
@@ -3,6 +3,40 @@ server {
   listen 80 default_server;
   listen [::]:80 default_server;
 
+  location ~ /user/.*[0-2]/ {
+    proxy_pass http://192.168.0.11:8080;
+    proxy_set_header Host $host;
+  }
+  location ~ /user/.*[3-5]/ {
+    proxy_pass http://192.168.0.12:8080;
+    proxy_set_header Host $host;
+  }
+  location ~ /user/.*[6-7]/ {
+    proxy_pass http://192.168.0.13:8080;
+    proxy_set_header Host $host;
+  }
+  location ~ /user/.*[8-9]/ {
+    proxy_pass http://192.168.0.14:8080;
+    proxy_set_header Host $host;
+  }
+  location ~ /admin/.*[0-2]/ {
+    proxy_pass http://192.168.0.11:8080;
+    proxy_set_header Host $host;
+  }
+  location ~ /admin/.*[3-5]/ {
+    proxy_pass http://192.168.0.12:8080;
+    proxy_set_header Host $host;
+  }
+  location ~ /admin/.*[6-7]/ {
+    proxy_pass http://192.168.0.13:8080;
+    proxy_set_header Host $host;
+  }
+  location ~ /admin/.*[8-9]/ {
+    proxy_pass http://192.168.0.14:8080;
+    proxy_set_header Host $host;
+  }
+
+
   location /user {
     proxy_pass http://localhost:8080;
     proxy_set_header Host $host;
