--- a/isucontinuous.yaml
+++ b/isucontinuous.yaml
@@ -33,7 +33,7 @@ hosts:
       PPROF_TMPDIR=/pprof/{{.Git.Revision}} /home/isucon/local/golang/bin/go tool pprof /home/isucon/webapp/go/isuconquest http://localhost:6060/debug/pprof/profile?seconds=90
     #command: >-
     #  PPROF_TMPDIR=/pprof/{{.Git.Revision}} /home/isucon/local/go/bin/go tool pprof /home/isucon/webapp/go/isucondition http://localhost:6060/debug/fgprof?seconds=90
-  after_bench: &after_bench
+  after_bench:
     slack_channel_id: "C6FC55B6W"
     target: /profile/{{.Git.Revision}}/
     command: >-
@@ -50,7 +50,16 @@ hosts:
   key: *key
   deploy: *deploy
   profiling: *profiling
-  after_bench: *after_bench
+  after_bench: &after_bench
+    slack_channel_id: "C6FC55B6W"
+    target: /profile/{{.Git.Revision}}/
+    command: >-
+      mkdir -p /profile/{{.Git.Revision}};
+      export PPROF_FILENAME=$(ls /pprof/{{.Git.Revision}}/ -tr | tail -n1);
+      if [ -f "/pprof/{{.Git.Revision}}/$PPROF_FILENAME" ]; then
+        /home/isucon/local/golang/bin/go tool pprof -top -cum /pprof/{{.Git.Revision}}/$PPROF_FILENAME > /profile/{{.Git.Revision}}/pprof_top_cum;
+      fi;
+      cat "{{.Env.SLOWLOG_PATH}}" | docker run -i --rm matsuu/pt-query-digest > /profile/{{.Git.Revision}}/slowlog;
 
 - host: 192.168.0.13
   user: *user
