Revert "update nginx.conf"
This reverts commit 552eebb2d0f38b936b42318f532e1becda148115.

--- a/localhost/nginx/sites-enabled/isuconquest.conf
+++ b/localhost/nginx/sites-enabled/isuconquest.conf
@@ -3,27 +3,35 @@ server {
   listen 80 default_server;
   listen [::]:80 default_server;
 
-  location ~ /user/[^/]*[0-3]/ {
+  location ~ /user/[^/]*[0-2]/ {
+    proxy_pass http://192.168.0.11:8080;
+    proxy_set_header Host $host;
+  }
+  location ~ /user/[^/]*[3-5]/ {
     proxy_pass http://192.168.0.12:8080;
     proxy_set_header Host $host;
   }
-  location ~ /user/[^/]*[4-6]/ {
+  location ~ /user/[^/]*[6-7]/ {
     proxy_pass http://192.168.0.13:8080;
     proxy_set_header Host $host;
   }
-  location ~ /user/[^/]*[7-9]/ {
+  location ~ /user/[^/]*[8-9]/ {
     proxy_pass http://192.168.0.14:8080;
     proxy_set_header Host $host;
   }
-  location ~ /admin/[^/]*[0-3]/ {
+  location ~ /admin/[^/]*[0-2]/ {
+    proxy_pass http://192.168.0.11:8080;
+    proxy_set_header Host $host;
+  }
+  location ~ /admin/[^/]*[3-5]/ {
     proxy_pass http://192.168.0.12:8080;
     proxy_set_header Host $host;
   }
-  location ~ /admin/[^/]*[4-6]/ {
+  location ~ /admin/[^/]*[6-7]/ {
     proxy_pass http://192.168.0.13:8080;
     proxy_set_header Host $host;
   }
-  location ~ /admin/[^/]*[7-9]/ {
+  location ~ /admin/[^/]*[8-9]/ {
     proxy_pass http://192.168.0.14:8080;
     proxy_set_header Host $host;
   }
