--- a/isucontinuous.yaml
+++ b/isucontinuous.yaml
@@ -50,7 +50,7 @@ hosts:
   key: *key
   deploy: *deploy
   profiling: *profiling
-  after_bench: &after_bench
+  after_bench:
     slack_channel_id: "C6FC55B6W"
     target: /profile/{{.Git.Revision}}/
     command: >-
@@ -65,12 +65,12 @@ hosts:
   user: *user
   key: *key
   deploy: *deploy
-  profiling: *profiling
-  after_bench: *after_bench
+  profiling: {}
+  after_bench: {}
 
 - host: 192.168.0.14
   user: *user
   key: *key
   deploy: *deploy
-  profiling: *profiling
-  after_bench: *after_bench
+  profiling: {}
+  after_bench: {}
