--- a/localhost/nginx/sites-enabled/isuconquest.conf
+++ b/localhost/nginx/sites-enabled/isuconquest.conf
@@ -3,11 +3,15 @@ server {
   listen 80 default_server;
   listen [::]:80 default_server;
 
-  location ~ /user/[^/]*[0-2]/ {
+  location ~ /user/[^/]*0/ {
+    proxy_pass http://192.168.0.11:8080;
+    proxy_set_header Host $host;
+  }
+  location ~ /user/[^/]*[1-3]/ {
     proxy_pass http://192.168.0.12:8080;
     proxy_set_header Host $host;
   }
-  location ~ /user/[^/]*[3-6]/ {
+  location ~ /user/[^/]*[4-6]/ {
     proxy_pass http://192.168.0.13:8080;
     proxy_set_header Host $host;
   }
@@ -15,11 +19,15 @@ server {
     proxy_pass http://192.168.0.14:8080;
     proxy_set_header Host $host;
   }
-  location ~ /admin/[^/]*[0-2]/ {
+  location ~ /admin/[^/]*0/ {
+    proxy_pass http://192.168.0.11:8080;
+    proxy_set_header Host $host;
+  }
+  location ~ /admin/[^/]*[1-3]/ {
     proxy_pass http://192.168.0.12:8080;
     proxy_set_header Host $host;
   }
-  location ~ /admin/[^/]*[3-6]/ {
+  location ~ /admin/[^/]*[4-6]/ {
     proxy_pass http://192.168.0.13:8080;
     proxy_set_header Host $host;
   }
